--- a/css/style.css
+++ b/css/style.css
@@ -6215,6 +6215,9 @@ html .pb140 {
 	background: linear-gradient(to right, #5495bf 0%,#000000 100%);
 	-webkit-box-shadow: 0 10px 15px 0px rgba(56, 0, 189, .2);
 	box-shadow: 0 10px 15px 0px rgba(56, 0, 189, .2);
+	background-image: linear-gradient(to right,  #FF5652, #FF974F, #FF5752, #FFC323);
+	background: -moz-linear-gradient(to right,  #FF5652, #FF974F, #FF5752, #FFC323);
+	background: -webkit-linear-gradient(to right,  #FF5652, #FF974F, #FF5752, #FFC323);
 }
 
 .bg-btn2 {
@@ -6269,6 +6272,13 @@ html .pb140 {
 	background: linear-gradient(135deg, #9100ff 0%,#3663ff 54%,#00e2ff 100%);
 	-webkit-box-shadow: 0 10px 15px 0px rgba(56, 0, 189, .2);
 	box-shadow: 0 10px 15px 0px rgb(0 49 189 / .2);
+}
+
+.niwax-btn2 {
+	background: -moz-linear-gradient(to right,  #FF5652, #FF974F, #FF5752, #FFC323);
+	background: -webkit-linear-gradient(to right,  #FF5652, #FF974F, #FF5752, #FFC323);
+	background-image: linear-gradient(to right,  #FF5652, #FF974F, #FF5752, #FFC323);
+	box-shadow: 0 10px 15px 0px rgb(175 0 87 / 20%);
 }
 
 .hover-scale img {
@@ -13017,15 +13027,6 @@ h2.vero-about-heading {
 	background-size: cover;
 }
 
-.smart-touch-portfolio {
-	height: 1070px !important;
-}
-
-.smart-touch-img-9 {
-	left: 60% !important;
-    top: 760px !important;
-}
-
 .smart-touch-img {
 	position: relative;
   	text-align: center;
@@ -13039,59 +13040,38 @@ h2.vero-about-heading {
 	transform: translate(-40%, -50%);
 }
 
-.touchBannerHeading{
-	color: #fff;
-	font-size: 60px;
-	font-weight: 900;
-	line-height: 80px;
-	letter-spacing: 2px;
-	word-spacing: 10px;
-}
-
-.touchBannerSubHeading{
-	color: #fff;
-	font-size: 60px;
-	font-weight: 400;
-	line-height: 60px;
-}
-
-.smart-touch-desc{	
+.smart-touch-desc {	
 	background-color: #161719;
 }
 
-.cardSmartTouch{
+.smart-touch-card {
 	border: none;
-}
-
-.largeImageAboutSec{
-	margin-bottom: -50px!important;
-}
-
-.nextAboutSection{
-	margin-top: -100px!important;
-}
-
-.plan-heading{
-	text-transform: uppercase;
-}
-
-.cardSmartTouchText{
 	background-color: #161719;
 	border-radius: 20px;
 	padding: 25px 20px;
-	height: 335px;
 }
 
-.cardSmartTouchTextHeading{
+.largeImageAboutSec {
+	margin-bottom: -50px!important;
+}
+
+.nextAboutSection {
+	margin-top: -100px!important;
+}
+
+.plan-heading {
+	text-transform: uppercase;
+}
+
+.smart-touch-card-heading {
 	font-style: normal;
 	font-weight: 800;
 	font-size: 32px;
 	line-height: 39px;
 	color: #FFFFFF;
-
 }
 
-.cardSmartTouchTextDescription{
+.smart-touch-card-desc{
 	font-style: normal;
 	font-weight: 500;
 	font-size: 18px;
